--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
+    "react-zoom-pan-pinch": "^3.4.4",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
